//protocol=174;
option java_package = "com.chuangyou.common.protobuf.pb.guild";
option java_outer_classname = "GuildSnapProto";

// 帮派信息，别人查看时
message GuildSnapMsg{
	optional int32 guildId = 1; // 门派ID
	optional int32 guildType = 2; // 门派类型 1玩家门派 2系统门派
	optional string name = 3; // 门派名字
	optional int64 gangId = 4; // 帮主ID
	optional string gangName = 5; // 帮主名字
	optional int32 level = 6; // 门派等级
	optional int64 fight = 7; // 门派战力

	optional int32 playerNum = 8; // 成员数量
	optional int32 maxPlayerNum = 9; // 最大成员数量

	optional int32 joinType = 10; // 加入条件类型(1需要批准 2禁止加入 3满足条件自动加入)
	optional int32 levelLimit = 11; // 最低等级限制
	optional int32 fightLimit = 12; // 最低战力限制

	optional bool hasApply = 13; // 讲求者是否已经申请加入该门派
}